# UCSD_CodeAlong_26_3_Image_Segmentation

./: .gitignore  Student_MLE_MiniProject_Fine_Tuning.ipynb  data.dvc  models.dvc  pyproject.toml  set_up.py  urls.txt
.dvc/: config
notebooks/: main.ipynb
