[tool.poetry]
name = "ucsd-codealong-26-3-image-seg-u-net"
version = "0.1.0"
description = ""
authors = ["asmith81 <alden.w.smith.iii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvc = "^3.58.0"
scmrepo = "^3.3.9"
awscli = "^1.36.23"
boto3 = "^1.35.82"
tensorflow = "^2.18.0"
tdqm = "^0.0.1"
scikit-image = "^0.25.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
